# brick

./: .gitignore  Anchor.toml  README.md  package-lock.json  package.json
app/brick/: package-lock.json  package.json
app/brick/src/components/: CreateApp.tsx  CreateToken.tsx  Footer.tsx  Navbar.tsx  Sidebar.tsx
app/brick/src/pages/: _app.tsx  create.tsx  createToken.tsx  index.tsx  tokens.tsx
app/brick/src/styles/: Home.module.css  globals.css
app/brick/src/utils/: constants.ts  helpers.ts  index.ts  types.ts
app/fishplace/: package-lock.json  package.json
app/fishplace/src/pages/: marketplace.tsx
app/token_access/: package-lock.json  package.json
app/token_access/src/components/: ContextProvider.tsx  Footer.tsx  Navbar.tsx  Notification.tsx  (+1 more)
programs/brick/: Cargo.toml
programs/brick/src/: errors.rs  lib.rs  utils.rs
programs/brick/src/instructions/: buy_asset.rs  buy_token.rs  create_app.rs  create_asset.rs  create_token.rs  delete_asset.rs  delete_token.rs  edit_asset_price.rs  edit_token_price.rs  mod.rs  refund.rs  share_asset.rs  share_token.rs  use_asset.rs  use_token.rs  withdraw_funds.rs
programs/brick/src/state/: app.rs  asset.rs  mod.rs  payment.rs  token_metadata.rs
programs/fishplace/: Cargo.toml
programs/fishplace/src/: lib.rs
programs/token_access/: Cargo.toml
programs/token_access/src/: errors.rs  lib.rs
tests/: brick.ts  fishplace.ts
tests/utils/: createBuyDataSetInstructions.ts  createFundedAssociatedTokenAccount.ts  createFundedWallet.ts  createMasterEditionInstructions.ts  createMint.ts  index.ts  initNewAccounts.ts
(+58 files in other folders)
