[package]
name = "fishplace"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "fishplace"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.26.0"
anchor-spl = "0.24.2"
mpl-token-metadata = { version="1.3.2", features = [ "no-entrypoint" ] }
solana-program = "1.9.13"